--- a/mockez-front/src/app/component/profile/modal/change-password/change-password.modal.html
+++ b/mockez-front/src/app/component/profile/modal/change-password/change-password.modal.html
@@ -2,21 +2,30 @@
   <div class='text-sm' style='width: 400px' [formGroup]='formGroup'>
     <p class='font-medium uppercase'>CHANGE PASSWORD</p>
     <div class='flex flex-col'>
-      <label for='old-password' class='font-medium mt-3 pl-2'>Old password:</label>
-      <input id='old-password' formControlName='oldPassword' class='w-full mt-1 border {{ invalid ? "border-red-500" : "" }} rounded p-2' placeholder='Enter old password'/>
+      <label for='old-password' class='font-medium mt-3 pl-2'>Current password:</label>
+      <input id='old-password' formControlName='currentPassword'
+             class='w-full mt-1 border {{ invalid ? "border-red-500" : "" }} rounded p-2'
+             placeholder='Enter old password' />
       <p *ngIf='invalid' class='text-red mt-1 font-medium pl-2'>Password wrong</p>
     </div>
     <div class='flex flex-col'>
       <label for='new-password' class='font-medium mt-3 pl-2'>New password:</label>
-      <input id='new-password' formControlName='newPassword' class='w-full mt-1 border rounded p-2' placeholder='Enter new password'/>
+      <input id='new-password' formControlName='newPassword' class='w-full mt-1 border rounded p-2'
+             placeholder='Enter new password' />
     </div>
     <div class='flex flex-col'>
       <label for='renew-password' class='font-medium mt-3 pl-2'>New password again:</label>
-      <input id='renew-password' formControlName='renewPassword' class='w-full mt-1 border rounded p-2' placeholder='Enter new password again'/>
+      <input id='renew-password' formControlName='renewPassword' class='w-full mt-1 border rounded p-2'
+             placeholder='Enter new password again' />
     </div>
     <div class='flex justify-end mt-3 '>
-      <button (click)='close(false)' type='button' class='bg-gray text-sm text-black rounded font-medium px-5 h-10 py-1.5 mr-3'>Cancel</button>
-      <button (click)='submit()' [disabled]='!isCanChange()' type='button' class='{{ isCanChange() ? "bg-green text-white" : "bg-gray" }} text-sm rounded font-medium px-5 h-10 py-1.5'>Change</button>
+      <button (click)='close(false)' type='button'
+              class='bg-gray text-sm text-black rounded font-medium px-5 h-10 py-1.5 mr-3'>Cancel
+      </button>
+      <button (click)='submit()' [disabled]='!isCanChange()' type='button'
+              class='{{ isCanChange() ? "bg-green text-white" : "bg-gray" }} text-sm rounded font-medium px-5 h-10 py-1.5'>
+        Change
+      </button>
     </div>
   </div>
 </div>
