--- a/mockez-front/src/app/app.component.html
+++ b/mockez-front/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div id='main' class='flex w-screen h-screen'>
-  <div id='navigation' class='z-10 bg-white w-80 drop-shadow-xl'>
+  <div id='navigation' class='z-10 bg-white w-80'>
     <app-navigation></app-navigation>
   </div>
-  <div id='content' class='bg-gray p-4 overflow-y-auto'>
+  <div id='content' class='bg-gray overflow-y-auto'>
     <router-outlet></router-outlet>
   </div>
 </div>
