--- a/mockez-front/src/app/component/group/modal/add-member/add-member.modal.html
+++ b/mockez-front/src/app/component/group/modal/add-member/add-member.modal.html
@@ -1,21 +1,27 @@
 <div id='main' class='dialog'>
-  <div class='' style='width: 800px; height: 800px'>
+  <div class='' style='width: 900px; height: 800px'>
     <div class='search text-center'>
-      <input class='text-sm w-1/2 py-2 px-5 shadow focus:drop-shadow-xl rounded-md' type='text'
-             placeholder='Find anything...' />
+      <input class='text-sm w-1/2 py-2 px-5 shadow focus:drop-shadow-xl rounded-md' type='text' [formControl]='filter'
+             placeholder='{{ "label.search_placeholder" | translate }}' />
     </div>
-    <div class='cards flex mt-5 justify-evenly flex-wrap overflow-y-scroll h-4/5'>
+    <p *ngIf='filter.value && !this.users?.length && this.storage?.length'
+       class='mt-3 text-sm text-center'>{{ "person.no_match" | translate }}</p>
+    <p *ngIf='!this.storage?.length' class='mt-3 text-sm text-center'>{{ 'person.empty' | translate }}</p>
+    <div class='cards flex mt-5 flex-wrap overflow-y-scroll h-4/5'>
       <div *ngFor='let user of users'
-           class='card relative m-4 shadow flex items-center cursor-pointer hover:drop-shadow-xl bg-white py-5 pl-10 pr-5 rounded-md w-80 h-32'
-           (click)='close(user)'>
+           class='card relative m-4 shadow flex items-center hover:drop-shadow-xl bg-white py-5 pl-10 pr-5 rounded-md w-96 h-32'>
         <div class='absolute left-4 rounded-md w-1 h-28'></div>
         <div class='w-1/4'>
           <img class='w-20' src='assets/profile.png' alt='profile' />
         </div>
         <div class='info ml-5 w-1/2'>
-          <p class='font-medium'>{{ user.name }}</p>
-          <p class='text-sm text-gray-500'>{{ user.bio }}</p>
-          <p class='text-sm'>{{ '' | truncate:20 }}</p>
+          <p class='font-medium hover:underline cursor-pointer' (click)='openDetail(user.id!)'>{{ user?.name }}</p>
+          <p class='text-sm text-gray-500'>{{ user?.bio }}</p>
+          <p class='text-sm text-gray-500'>{{ 'Phone: +' + user?.phone }}</p>
+        </div>
+        <div class='w-1/6 flex justify-end'>
+          <img class='w-5 cursor-pointer' src='assets/add-user.png' alt='add user'
+               (click)='close(user)' />
         </div>
         <div class='absolute top-4 right-5 flex'>
           <p class='w-3 h-3 rounded-full bg-red'></p>
@@ -24,7 +30,7 @@
         </div>
       </div>
     </div>
-    <div class='mt-10 flex justify-end'>
+    <div class='absolute bottom-5 right-5 flex justify-end'>
       <button (click)='close(false)' type='button' class='bg-gray text-sm text-black rounded font-medium px-5 h-10 py-2 mr-3'>Cancel</button>
     </div>
   </div>
