--- a/mockez-front/src/app/component/group/modal/delete-group/delete-group.modal.html
+++ b/mockez-front/src/app/component/group/modal/delete-group/delete-group.modal.html
@@ -10,10 +10,15 @@
     </div>
     <p class='mt-3'>This action cannot be undone.</p>
     <p class='mt-3'>Please type <b>{{ name }}</b> to confirm.</p>
-    <input class='mt-3 w-full h-9 border-2 rounded' type='text' formControlName='name'/>
+    <input class='mt-3 w-full h-9 border-2 rounded' type='text' formControlName='name' />
     <div class='mt-3 flex justify-end'>
-      <button (click)='close(false)' type='button' class='bg-gray text-sm text-black rounded font-medium px-5 h-10 py-2 mr-3'>Cancel</button>
-      <button (click)='close(true)' type='button' [disabled]='name!==formGroup.get("name")?.value' class='{{ name===formGroup.get("name")?.value ? "bg-red text-white" : "bg-gray" }} text-sm rounded font-medium px-5 h-10 py-2 mr-3'>Delete</button>
+      <button (click)='close(false)' type='button'
+              class='bg-gray text-sm text-black rounded font-medium px-5 h-10 py-2 mr-3'>Cancel
+      </button>
+      <button (click)='close(true)' type='button' [disabled]='name!==formGroup.get("name")?.value'
+              class='{{ name===formGroup.get("name")?.value ? "bg-red text-white" : "bg-gray" }} text-sm rounded font-medium px-5 h-10 py-2'>
+        Delete
+      </button>
     </div>
   </div>
 </div>
