--- a/mockez-front/src/app/component/profile/component/profile/profile.component.html
+++ b/mockez-front/src/app/component/profile/component/profile/profile.component.html
@@ -1,71 +1,75 @@
-<div id='main' class='mx-auto'>
-  <div class='flex items-center relative rounded bg-white py-5 px-20'>
-    <img class='w-32' src='assets/profile.png' alt='profile' />
-    <div class='ml-8'>
-      <p class='text-lg font-medium'>{{ user.name | uppercase }}</p>
-      <p class='text-gray-500 text-sm'>{{ user.bio }}</p>
+<div id='main' class='mx-auto h-full'>
+  <div class='bg-white rounded text-sm h-full' [formGroup]='formGroup'>
+    <div class='flex items-center relative py-5 px-20'>
+      <img class='w-28' src='assets/profile.png' alt='profile' />
+      <div class='ml-8'>
+        <p class='text-lg font-medium'>{{ user.name | uppercase }}</p>
+        <p class='text-gray-500 text-sm'>{{ user.bio }}</p>
+      </div>
+      <div class='flex flex-col absolute right-20'>
+        <p class='w-3 h-3 mt-3 rounded-full bg-red'></p>
+        <p class='w-3 h-3 mt-3 rounded-full bg-yellow'></p>
+        <p class='w-3 h-3 mt-3 rounded-full bg-green'></p>
+      </div>
     </div>
-    <div class='flex flex-col absolute right-20'>
-      <p class='w-3 h-3 mt-3 rounded-full bg-red'></p>
-      <p class='w-3 h-3 mt-3 rounded-full bg-yellow'></p>
-      <p class='w-3 h-3 mt-3 rounded-full bg-green'></p>
-    </div>
-  </div>
-  <div class='mt-3 bg-white rounded py-16 px-20 text-sm' [formGroup]='formGroup'>
-    <div class='flex mt-5 justify-center'>
-      <p class='font-medium w-1/4'>{{ 'Username:' }}</p>
+    <div class='flex mt-10 justify-center'>
+      <p class='font-medium w-1/4'>{{ 'profile.username_colon' | translate }}</p>
       <input class='border w-1/2 py-2 pl-3 pr-14 rounded-md' type='email' formControlName='username'
-             placeholder='Please enter your email' />
+             placeholder='{{ "profile.username_placeholder" | translate }}' />
     </div>
     <div class='flex mt-5 justify-center'>
-      <p class='font-medium w-1/4'>{{ 'Name:' }}</p>
+      <p class='font-medium w-1/4'>{{ 'profile.name_colon' | translate }}</p>
       <input class='border w-1/2 py-2 pl-3 pr-14 rounded-md' type='text' formControlName='name'
-             placeholder='Please enter your name' />
+             placeholder='{{ "profile.name_placeholder" | translate }}' />
     </div>
     <div class='flex mt-5 justify-center'>
       <p class='font-medium w-1/4'>
-        {{ 'Bio:' }}<br />
-        <span class='font-normal mt-2 text-gray-500'>{{ 'This will be displayed on your profile.' }}</span>
+        {{ 'profile.bio_colon' | translate }}<br />
+        <span class='font-normal mt-2 text-gray-500'>{{ 'profile.bio_further_info' | translate }}</span>
       </p>
       <textarea class='border w-1/2 py-2 pl-3 pr-14 h-28 rounded-md outline-0' formControlName='bio' type='text'
-                placeholder='Please enter your bio'></textarea>
+                placeholder='{{ "profile.bio_placeholder" | translate }}'></textarea>
     </div>
     <div class='flex mt-5 justify-center'>
-      <p class='font-medium w-1/4'>{{ 'Phone:' }}</p>
+      <p class='font-medium w-1/4'>{{ 'profile.phone_colon' | translate }}</p>
       <input class='border w-1/2 py-2 pl-3 pr-14 rounded-md' type='text' formControlName='phone'
-             placeholder='Please enter your phone' />
+             placeholder='{{ "profile.phone_placeholder" | translate }}' />
     </div>
     <div class='flex my-7 justify-center'>
-      <p class='font-medium w-1/4'>{{ 'Gender:' }}</p>
+      <p class='font-medium w-1/4'>{{ 'profile.gender_colon' | translate }}</p>
       <div class='flex w-1/2'>
         <div class='flex items-center'>
           <input id='male' type='radio' name='gender' (click)='gender=MALE' [checked]='gender===MALE'
                  class='cursor-pointer w-4 h-4'>
-          <label for='male' class='ml-2 text-sm'>Male</label>
+          <label for='male' class='ml-2 text-sm cursor-pointer'
+                 (click)='gender=MALE'>{{ 'profile.gender.male' | translate }}</label>
         </div>
         <div class='flex items-center ml-28'>
           <input id='female' type='radio' name='gender' (click)='gender=FEMALE' [checked]='gender===FEMALE'
                  class='cursor-pointer w-4 h-4'>
-          <label for='female' class='ml-2 text-sm'>Female</label>
+          <label for='female' class='ml-2 text-sm cursor-pointer'
+                 (click)='gender=FEMALE'>{{ 'profile.gender.female' | translate }}</label>
         </div>
       </div>
     </div>
     <div class='flex mt-5 justify-center'>
-      <p class='font-medium w-1/4'>{{ 'Address:' }}</p>
+      <p class='font-medium w-1/4'>{{ 'profile.address_colon' | translate }}</p>
       <textarea class='border w-1/2 py-2 pl-3 pr-14 rounded-md outline-0 h-40' formControlName='address' type='text'
-                placeholder='Please enter your address'></textarea>
+                placeholder='{{ "profile.address_placeholder" | translate }}'></textarea>
     </div>
     <div class='flex mt-5 justify-center'>
-      <p class='font-medium w-1/4'>{{ 'Date of birth:' }}</p>
+      <p class='font-medium w-1/4'>{{ 'profile.date_of_birth_colon' | translate }}</p>
       <input class='border cursor-pointer w-1/2 py-2 pl-3 pr-14 rounded-md' formControlName='dob'
              type='date' />
     </div>
     <div class='flex mt-5 justify-center'>
-      <button type='button' class='w-1/4 outline-0 bg-yellow text-sm text-white rounded font-medium px-5 h-10 py-2 mr-3'
-              (click)='changePassword()'>Change Password
+      <button type='button'
+              class='hover:drop-shadow-xl w-1/4 outline-0 bg-yellow text-sm text-white rounded font-medium px-5 h-10 py-2 mr-2'
+              (click)='changePassword()'>{{ 'profile.change_password' | translate }}
       </button>
-      <button type='button' class='outline-0 w-1/2 bg-green text-sm text-white rounded font-medium px-5 h-10 py-2 mr-3'
-              (click)='submit()'>Save
+      <button type='submit'
+              class='hover:drop-shadow-xl w-1/2 outline-0 bg-green text-sm text-white rounded font-medium px-5 h-10 py-2'
+              (click)='submit()'>{{ 'profile.save_change' | translate }}
       </button>
     </div>
   </div>
