--- a/mockez-front/src/app/component/project/modal/save-project/save-project.modal.html
+++ b/mockez-front/src/app/component/project/modal/save-project/save-project.modal.html
@@ -1,7 +1,7 @@
 <div id='main' class='dialog text-sm'>
   <div class='board' [formGroup]='formGroup'>
     <div class='flex justify-between'>
-      <p class='font-bold'>CREATE PROJECT</p>
+      <p class='font-bold'>SAVE PROJECT</p>
       <div class='flex'>
         <p class='w-3 h-3 rounded-full bg-red'></p>
         <p class='w-3 h-3 ml-3 rounded-full bg-yellow'></p>
