--- a/mockez-front/src/app/component/schema/component/schemas/schemas.component.html
+++ b/mockez-front/src/app/component/schema/component/schemas/schemas.component.html
@@ -1,34 +1,34 @@
-<div id='main' class='mx-auto'>
-  <div class='search text-center' [formGroup]='credential'>
-    <input class='text-sm w-1/2 py-2 px-5 rounded-md' formControlName='filter' type='text' placeholder='Find anything...' />
+<div id='main' class='mx-auto bg-white overflow-y-hidden h-full'>
+  <div class='mt-10 text-center' [formGroup]='credential'>
+    <input class='text-sm w-1/2 py-2 shadow focus:drop-shadow-xl px-5 rounded-md' formControlName='filter' type='text'
+           placeholder='{{ "label.search_placeholder" | translate }}' />
+    <button class='ml-3 rounded bg-green font-medium hover:drop-shadow-xl text-white text-sm py-1.5 px-5'
+            (click)='create()'>{{ 'label.button_new' | translate }}</button>
   </div>
   <div class='flex mt-5'>
-    <div class='relative cards -ml-3 flex flex-wrap content-start {{ isOpenDetail ? "w-3/4" : "" }}'>
+    <div class='relative cards -ml-3 flex p-5 flex-wrap content-start {{ isOpenDetail ? "w-3/4" : "" }}'>
       <div *ngFor='let schema of schemas; index as index'
-           class='m-3 card rounded-md cursor-pointer p-5 w-60 h-80 bg-white relative {{ (schemaDetail && schemaDetail.id===schema.id) ? "drop-shadow-xl" : "" }} hover:drop-shadow-xl'
+           class='m-3 card rounded-md shadow cursor-pointer p-5 w-60 h-80 bg-white relative {{ (schemaDetail && schemaDetail.id===schema.id) ? "drop-shadow-xl" : "" }} hover:drop-shadow-xl'
            (click)='openDetail(schema.id!)'>
-        <p class='text-sm rounded-2xl bg-green text-white p-1 w-24 text-center font-medium'>{{ 'complete' | uppercase }}</p>
+        <p
+          class='text-sm rounded-2xl bg-green text-white p-1 w-24 text-center font-medium'>{{ 'complete' | uppercase }}</p>
         <p class='mt-3 font-medium'>{{ schema.name | titlecase }}</p>
         <p class='text-sm text-gray-500'>{{ schema.modifiedDate | date }}</p>
         <p class='mt-5 text-sm'>{{ schema.description | truncate:100 }}</p>
-        <p class='absolute bottom-5 left-5 text-sm'>Table: {{ schema.tables?.length || 0 }}</p>
+<!--        <p class='absolute bottom-5 left-5 text-sm'>Table: {{ schema.tables?.length || 0 }}</p>-->
         <div class='flex absolute bottom-5 right-5'>
           <p class='w-3 h-3 rounded-full bg-red'></p>
           <p class='w-3 h-3 ml-3 rounded-full bg-yellow'></p>
           <p class='w-3 h-3 ml-3 rounded-full bg-green'></p>
         </div>
       </div>
-      <button
-        class='absolute bottom-10 right-5 bg-green rounded-full w-12 h-12 drop-shadow-xl font-bold text-white search-button'
-        (click)='create()'>
-        +
-      </button>
     </div>
     <div *ngIf='isOpenDetail' class='detail my-5 w-1/4'>
       <div class='bg-white p-5 text-sm rounded-md drop-shadow-xl'>
-        <div class='dock cursor-pointer absolute rotate-180 z-20 -left-5 bg-blue drop-shadow w-8 h-8 rounded-full flex justify-center items-center'
-             (click)='isOpenDetail=false'>
-          <img class='w-5' src='assets/icon/nav/unexpanded.png' alt='unexpanded'/>
+        <div
+          class='dock cursor-pointer absolute rotate-180 z-20 -left-5 bg-blue drop-shadow w-8 h-8 rounded-full flex justify-center items-center'
+          (click)='isOpenDetail=false'>
+          <img class='w-5' src='assets/icon/nav/unexpanded.png' alt='unexpanded' />
         </div>
         <div class='flex justify-between'>
           <p class='text-lg font-medium'>{{ 'Detail Schema' | uppercase }}</p>
@@ -42,19 +42,25 @@
         <p class='mt-3 leading-6'>{{ schemaDetail.description }}</p>
         <div class='flex mt-8 items-center'>
           Status:
-          <p class='rounded-2xl ml-3 bg-green text-white p-1 w-24 text-center font-medium'>{{ 'complete' | uppercase }}</p>
+          <p
+            class='rounded-2xl ml-3 bg-green text-white p-1 w-24 text-center font-medium'>{{ 'complete' | uppercase }}</p>
         </div>
-        <p class='mt-3'>Table: 10</p>
-        <div class='mt-3 rounded-md bg-gray max-h-40 p-5 flex flex-wrap overflow-y-scroll'>
-          <p class='bg-blue font-medium p-2 mx-2 my-2 rounded-md text-white'>User</p>
-          <p class='bg-blue font-medium p-2 mx-2 my-2 rounded-md text-white'>Product</p>
-          <p class='bg-blue font-medium p-2 mx-2 my-2 rounded-md text-white'>Checkout</p>
-          <p class='bg-blue font-medium p-2 mx-2 my-2 rounded-md text-white'>Receipt</p>
-          <p class='bg-blue font-medium p-2 mx-2 my-2 rounded-md text-white'>Customer</p>
-        </div>
-        <button class='mt-4 bg-green text-white rounded text-sm font-medium p-2 w-full' (click)='openTable()'>Access Table</button>
-        <button class='mt-3 bg-yellow text-white rounded text-sm font-medium p-2 w-full' (click)='modifySchema()'>Modify detail</button>
-        <button class='mt-3 bg-red text-white rounded text-sm font-medium p-2 w-full' (click)='deleteSchema()'>Delete</button>
+<!--        <p class='mt-3'>Table: 10</p>-->
+<!--        <div class='mt-3 rounded-md bg-gray max-h-40 p-5 flex flex-wrap overflow-y-scroll'>-->
+<!--          <p class='bg-blue font-medium p-2 mx-2 my-2 rounded-md text-white'>User</p>-->
+<!--          <p class='bg-blue font-medium p-2 mx-2 my-2 rounded-md text-white'>Product</p>-->
+<!--          <p class='bg-blue font-medium p-2 mx-2 my-2 rounded-md text-white'>Checkout</p>-->
+<!--          <p class='bg-blue font-medium p-2 mx-2 my-2 rounded-md text-white'>Receipt</p>-->
+<!--          <p class='bg-blue font-medium p-2 mx-2 my-2 rounded-md text-white'>Customer</p>-->
+<!--        </div>-->
+        <button class='mt-4 bg-green text-white rounded text-sm font-medium p-2 w-full' (click)='openTable()'>Access
+          Table
+        </button>
+        <button class='mt-3 bg-yellow text-white rounded text-sm font-medium p-2 w-full' (click)='modifySchema()'>Modify
+          detail
+        </button>
+        <button class='mt-3 bg-red text-white rounded text-sm font-medium p-2 w-full' (click)='deleteSchema()'>Delete
+        </button>
       </div>
     </div>
   </div>
