--- a/mockez-front/src/app/shared/layout/component/navigation/navigation.component.html
+++ b/mockez-front/src/app/shared/layout/component/navigation/navigation.component.html
@@ -1,6 +1,6 @@
 <div id='main' class='h-screen border-r-2 relative'>
-  <div
-    class='dock cursor-pointer bg-green absolute z-20 -right-4 drop-shadow w-8 h-8 rounded-full flex justify-center items-center'>
+  <div *ngIf='false'
+       class='dock cursor-pointer bg-green absolute z-20 -right-4 drop-shadow w-8 h-8 rounded-full flex justify-center items-center'>
     <img class='w-5' src='assets/icon/nav/unexpanded.png' alt='unexpanded' />
   </div>
   <section class='p-4'>
@@ -16,7 +16,7 @@
   </section>
   <hr class='mt-3' />
   <section class='text-sm font-medium mt-5 pr-6'>
-    <a routerLink='notification' routerLinkActive='active'  *ngIf='isEnabled("notification")'
+    <a routerLink='notification' routerLinkActive='active' *ngIf='isEnabled("notification")'
        class='tab flex items-center cursor-pointer py-3 rounded-r-3xl w-full relative'>
       <img src='assets/icon/nav/notification.png' alt='NOTIFICATION' class='icon ml-8' />
       <span class='ml-5'>NOTIFICATION</span>
@@ -74,6 +74,11 @@
        class='tab flex items-center cursor-pointer py-3 rounded-r-3xl w-full relative'>
       <img src='assets/icon/nav/settings.png' alt='SETTINGS' class='icon ml-8' />
       <span class='ml-5'>SETTING</span>
+    </a>
+    <a (click)='logout()' *ngIf='isEnabled("logout")'
+       class='tab flex items-center cursor-pointer py-3 rounded-r-3xl w-full relative'>
+      <img src='assets/icon/nav/logout.png' alt='LOGOUT' class='icon ml-8' />
+      <span class='ml-5'>LOGOUT</span>
     </a>
   </section>
 </div>
